--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "kraken",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Personal Discord Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "node .": "node run index.js"
   },
   "keywords": [
     "Discord",
