--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@vitalets/google-translate-api": "^3.0.0",
     "discord.js": "^12.2.0",
-    "giphy-js-sdk-core": "^1.0.6"
+    "giphy-js-sdk-core": "^1.0.6",
+    "random-puppy": "^1.1.0"
   },
   "devDependencies": {},
   "repository": {
