--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@vitalets/google-translate-api": "^3.0.0",
     "discord.js": "^12.2.0",
     "giphy-js-sdk-core": "^1.0.6",
-    "random-puppy": "^1.1.0"
+    "node-fetch": "^2.6.0",
+    "opusscript": "0.0.7",
+    "random-puppy": "^1.1.0",
+    "ytdl-core": "^2.1.1"
   },
   "devDependencies": {},
   "repository": {
